# projec

./: .gitignore  Cargo.toml  GEMINI.md  README.md  RESEARCH_FINDINGS.md  SECURITY_AUDIT.md  example_arcee_config.toml  example_arcee_direct_config.toml  test_arcee_config.yaml  test_config.rs  test_openrouter_config.toml  test_openrouter_config.yaml
crates/agent-core/: Cargo.toml
crates/agent-core/src/: evaluation.rs  improvement.rs  lib.rs  model_assignment.rs  orchestrator.rs  planning.rs  reporting.rs  self_compile.rs  state.rs  telemetry.rs
crates/analysis/: Cargo.toml
crates/analysis/src/: lib.rs  lsp.rs  semantic.rs
crates/common/: Cargo.toml
crates/common/src/: crypto.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/intelligence/: Cargo.toml
crates/intelligence/src/: gateway.rs  gateway_vertex.rs  intent.rs  lib.rs  prompt.rs
crates/intelligence/tests/: gateway_integration.rs  ollama_integration.rs
crates/knowledge/: Cargo.toml
crates/knowledge/src/: consolidation.rs  documentation.rs  graph.rs  lib.rs  memory.rs  vector.rs
crates/telemetry-server/: Cargo.toml
crates/telemetry-server/src/: main.rs
crates/tools/: Cargo.toml
crates/tools/src/: filesystem.rs  git.rs  http.rs  learning.rs  lib.rs  search.rs
docs/: AGENT_INSTRUCTIONS.md  API.md  ARCHITECTURE.md  DEVELOPMENT.md  PRINCIPLES.md  PROMPT_RESEARCH.md  ROADMAP.md
examples/: task_delegation.rs
src/: main.rs
tests/: task_delegation_test.rs
