[workspace]
members = [
    "crates/agent-core",
    "crates/intelligence",
    "crates/analysis",
    "crates/knowledge",
    "crates/tools",
    "crates/config",
    "crates/common",
    "crates/telemetry-server",
]
resolver = "2"

[workspace.package]
name = "coding-agent"
version = "0.1.0"
edition = "2021"
authors = ["Coding Agent Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/coding-agent"
rust-version = "1.75"

[package]
name = "coding-agent"
version = "0.1.0"
edition = "2021"
authors = ["Coding Agent Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/coding-agent"
rust-version = "1.75"

[[bin]]
name = "coding-agent"
path = "src/main.rs"

[dependencies]
# Internal crates
agent-core = { path = "crates/agent-core" }
common = { path = "crates/common" }
agent-config = { path = "crates/config" }
intelligence = { path = "crates/intelligence" }
analysis = { path = "crates/analysis" }
knowledge = { path = "crates/knowledge" }
tools = { path = "crates/tools" }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Async traits
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures = "0.3"

# LLM integrations
async-openai = "0.18"

# LSP
lsp-types = "0.95"
tower-lsp = "0.20"

# Vector store
qdrant-client = "1.7"

# Knowledge graph
neo4rs = "0.7"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Configuration
config = "0.14"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Testing
mockall = "0.12"
tempfile = "3.9"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
glob = "0.3"
walkdir = "2.4"
dashmap = "5.5"
parking_lot = "0.12"
once_cell = "1.19"

# Internal crates
common = { path = "crates/common" }
agent-config = { path = "crates/config" }
intelligence = { path = "crates/intelligence" }
analysis = { path = "crates/analysis" }
knowledge = { path = "crates/knowledge" }
tools = { path = "crates/tools" }
agent-core = { path = "crates/agent-core" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true