[package]
name = "agent-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
common = { workspace = true }

# Configuration
toml = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
tracing = { workspace = true }
once_cell = { workspace = true }
url = "2.5"

[dev-dependencies]
tempfile = { workspace = true }