[package]
name = "intelligence"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
common = { workspace = true }
config = { workspace = true, package = "agent-config" }
knowledge = { workspace = true }

# LLM integrations
async-openai = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }