[package]
name = "knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
common = { workspace = true }
config = { workspace = true, package = "agent-config" }

# Vector store
qdrant-client = { workspace = true }

# Knowledge graph
neo4rs = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Utilities
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
walkdir = { workspace = true }
sys-info = "0.9"
num_cpus = "1.16"
regex = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }