[package]
name = "tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Internal
common = { workspace = true }
config = { workspace = true, package = "agent-config" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Utilities
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tempfile = { workspace = true }